create an org link and capture a toot

--- a/emacs.org
+++ b/emacs.org
@@ -1164,6 +1164,10 @@ The nice thing about completion frameworks is that they support interactively na
   :hook (after-init . vertico-mode))
 
 #+end_src
+
+#+RESULTS:
+: #s(hash-table size 65 test eql rehash-size 1.5 rehash-threshold 0.8125 data (:use-package (26605 51953 577522 0) :init (26605 51953 577484 0) :init-secs (0 0 23 0) :use-package-secs (0 0 96 0)))
+
 *** Completion at point
 [[https://github.com/minad/corfu][Corfu]] (COmpletion in Region FUnction) is an in-buffer completion with a small
 completion popup.
@@ -4487,6 +4491,46 @@ The following variables are set with ~customize~:
   (mastodon-client--token-file (expand-file-name "mastodon/mastodon.plstore" forge-state-dir))
   :config
   (mastodon-discover))
+
+;; heavily borrowed from sachac
+;; The description needs more work.
+;; It should also capture the date in an org format
+
+(defun my-mastodon-store-link ()
+  "Store links from Mastodon buffers."
+  (when (derived-mode-p 'mastodon-mode)
+    (let ((json (get-text-property (point) 'item-json)))
+      (org-link-store-props
+       :link (mastodon-toot--toot-url)
+       :description (concat (let-alist (mastodon-tl--property 'item-json) .account.display_name)
+                            " "
+                            (let-alist (mastodon-tl--property 'item-json) .account.acct))
+       :content (mastodon-tl--content json)
+       :text (concat
+              (string-trim (mastodon-tl--render-text (mastodon-tl--content json)))
+              (when (assoc-default 'media_attachments json)
+                (concat "\n\n"
+                        (mapconcat (lambda (attachment)
+                                     (org-link-make-string
+                                      (assoc-default 'url attachment)
+                                      (assoc-default 'description attachment)))
+                                   (assoc-default 'media_attachments json)
+                                   "\n")))
+              )
+       ))
+    ))
+
+(use-package org
+  :config
+  (org-link-set-parameters
+   "mastodon"
+   :store 'my-mastodon-store-link)
+  (with-eval-after-load 'org-capture
+    (add-to-list 'org-capture-templates
+                 `("rt" "Mastodon" entry
+                   (file+olp+datetree "articles.org")
+                   "* %a on Mastodon %?  :TOOT:\n:PROPERTIES:\n:URL: %:link\n:CAPTURED:  %U\n:END:\n#+BEGIN_QUOTE\n%:text\n#+END_QUOTE\n"
+                   :prepend t))))
 #+end_src
 
 Keybindings of note:
