add a capture target for radio logging

--- a/emacs.org
+++ b/emacs.org
@@ -3366,9 +3366,6 @@ Miscellaneous notes:
              (file "inbox.org")
              (function notmuch-calendar-capture-event)
              :prepend t)
-            ("l" "Log" entry
-             (file+olp+datetree "journal.org")
-             "* %U - %?\n")
             ("n" "Meeting notes" entry
              (file+olp+datetree "journal.org")
              "* Notes - %a \n:PROPERTIES:\n:CAPTURED:  %U\n:END:\n%U\nAttendees:\n\nAgenda:\n\nDiscussion:\n"
@@ -3383,6 +3380,15 @@ Miscellaneous notes:
              (file+headline "notebook.org" "Unfiled")
              "* %^L %^g \n:PROPERTIES:\n:CAPTURED: %U\n:END:\n\n"
              :prepend t)
+
+            ("l" "Log")
+            ("ll" "Log" entry
+             (file+olp+datetree "journal.org")
+             "* %U - %?\n")
+            ("lr" "Radio log" entry
+             (file+olp+datetree "journal.org")
+             "* %U - %^{LOCATION|QTH}p %? :RADIO:\n#+begin_src fle\n%(fle-init-log--contents)\n#+end_src"
+             )
 
             ("r" "Reference")
             ("rm" "Music" entry
