--- a/emacs.org
+++ b/emacs.org
@@ -1861,8 +1861,9 @@ one is interested is most likely defined.
   :ensure nil
   :commands (eglot eglot-ensure)
   :custom
-  (eglot-send-changes-idle-time 0.1)
   (eglot-auto-shudown t)
+  (eglot-prefer-plaintext t)
+  (eglot-send-changes-idle-time 0.1)
   (eglot-extend-to-xref t)
   :config
   ;; (setq-default eglot-workspace-configuration
@@ -1876,7 +1877,7 @@ one is interested is most likely defined.
   ;;              '(yaml-mode . ("yaml-language-server")))
   (fset #'jsonrpc--log-event #'ignore)  ; don't log every event
   :hook
-  (python-mode . eglot-ensure)
+  (python-ts-mode . eglot-ensure)
   (yaml-mode . eglot-ensure))
 #+end_src
 
