--- a/emacs.org
+++ b/emacs.org
@@ -451,7 +451,6 @@ behavior, and load =custom.el= file, used by /customize/.
     (setopt message-auto-save-directory (expand-file-name "messages" forge-state-dir))
     (setopt package-quickstart-file (expand-file-name "package-quickstart.el" forge-state-dir))
     (setopt project-list-file (expand-file-name "project-list.el" forge-state-dir))
-    (setopt tramp-auto-save-directory (expand-file-name "tramp/auto-save" forge-state-dir))
     (setopt tramp-persistency-file-name (expand-file-name "tramp/persistency.el" forge-state-dir))
     (setopt url-cache-directory (expand-file-name "url/cache/" forge-state-dir))
     (setopt url-configuration-directory (expand-file-name "url/configuration/" forge-state-dir))))
@@ -1632,13 +1631,14 @@ regularly.
 (setopt auto-save-default t)
 (setopt auto-save-timeout 120)
 (setopt auto-save-interval 64)
-(setq auto-save-include-big-deletions t ;; don't auto-disable auto-save after deleting large chunks
-      auto-save-list-file-prefix (expand-file-name "autosave/" forge-state-dir)
-      ;; handle tramp paths differently than local ones, borrowed from doom
-      auto-save-file-name-transforms
-      (list (list "\\`/[^/]*:\\([^/]*/\\)*\\([^/]*\\)\\'"
-                  (concat auto-save-list-file-prefix "tramp-\\2") t)
-            (list ".*" auto-save-list-file-prefix t)))
+(setopt auto-save-include-big-deletions t ;; don't auto-disable auto-save after deleting large chunks
+        auto-save-list-file-prefix (expand-file-name "autosave/" forge-state-dir)
+        tramp-auto-save-directory (expand-file-name "tramp/auto-save" forge-state-dir)
+        auto-save-file-name-transforms
+        (list (list "\\`/[^/]*:\\([^/]*/\\)*\\([^/]*\\)\\'"
+                    ;; handle tramp paths differently than local ones, borrowed from doom
+                    (concat auto-save-list-file-prefix "tramp-\\2") t)
+              (list ".*" auto-save-list-file-prefix t)))
 #+end_src
 
 ** Page breaks
