--- a/emacs.org
+++ b/emacs.org
@@ -2090,6 +2090,7 @@ See also [[http://emacsrocks.com/e15.html][Emacs Rocks: restclient-mode]] episod
 (use-package restclient
   :mode ("\\.http\\'" . restclient-mode))
 
+(use-package verb)
 #+end_src
 *** GraphQL
 [[https://github.com/davazp/graphql-mode][graphql]] is a mode to edit GraphQL schema and queries.
