change name of property when capturing via eww

--- a/emacs.org
+++ b/emacs.org
@@ -3614,7 +3614,7 @@ Miscellaneous notes:
       (concat
        "* %a %? :ARTICLE:
   :PROPERTIES:
-  :CREATED:  %U
+  :CAPTURED:  %U
   :URL:      " (eww-current-url) "
   :END:\n\n" (car kill-ring))))
 
