--- a/emacs.org
+++ b/emacs.org
@@ -4554,7 +4554,8 @@ Pull in ~ip-query~ for functions to query the [[https://team-cymru.com/community
 (use-package ip-query
   :ensure nil
   :init (init-vc-install :fetcher "github" :repo "sfromm/ip-query")
-  :commands (ip-query ip-query-asn))
+  :commands (ip-query ip-query-asn)
+  :hook (ip-query-mode . page-break-lines-mode))
 #+end_src
 
 =dig-extended= is meant to be a wrapper around =dig=, using the Emacs [[https://www.gnu.org/software/emacs/manual/html_node/elisp/Advising-Functions.html][advice]] facility.
